--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body::-webkit-scrollbar {
+    display:none;
+  }
+
+  .bg-custom-gradient {
+    background-image: linear-gradient(180deg, #FFF 0%, #F6F6F6 100%);
+  }
+
+  .container2 {
+    max-width: 1310px;
+  }
+
+  
