--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,14 @@ body::-webkit-scrollbar {
     max-width: 1310px;
   }
 
+  .embla {
+    overflow: hidden;
+  }
+  .embla__container {
+    display: flex;
+  }
+  .embla__slide {
+    flex: 0 0 100%;
+    min-width: 0;
+  }
   
